force-app/main/default/objects/JourneyTask__c/JourneyTask__c.object-meta.xml
<CustomObject>
    <description>This SObject will comprise several steps that tracks and records the progress of the candidates.</description>
    <label>JourneyTask</label>
    <nameField>
        <label>JourneyTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JourneyTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>