force-app/main/default/objects/JourneyTask__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field indicating whether the Task has been completed</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>