force-app/main/default/objects/JourneyTask__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>This will show the status of a candidate&apos;s journey.</description>
    <formula>IF( Completed__c == true, &quot;Complete&quot;, IF( Estimated_Completion_Date__c &lt; Today(), &quot;Overdue&quot;, &quot;In Progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>