force-app/main/default/objects/JourneyTask__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>This will calculate and show the date which the task set is expected to be completed.</description>
    <formula>Journey__r.Onboarding_Start_Date__c  +   Relative_Days_to_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>