force-app/main/default/objects/JourneyTask__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>JourneyTasks</relationshipLabel>
    <relationshipName>JourneyTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>