force-app/main/default/objects/JourneyTask__c/fields/Relative_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Relative_Days_to_Complete__c</fullName>
    <description>This will be used to input the amount of day it will take to complete certain tasks.</description>
    <label>Relative Days to Complete</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>