force-app/main/default/objects/JourneyTask__c/fields/TemplateTask__c.field-meta.xml
<CustomField>
    <fullName>TemplateTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TemplateTask</label>
    <referenceTo>TemplateTask__c</referenceTo>
    <relationshipName>JourneyTasks</relationshipName>
    <type>Lookup</type>
</CustomField>